--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,15 +5,6 @@
     box-sizing: border-box;
 }
 
-@font-face {
-    font-family: "Roboto";
-    src: url("/assets/fonts/Roboto/Roboto-Regular.ttf") format("woff2");
-}
-
-@font-face {
-    font-family: "Inter";
-    src: url("/assets/fonts/Inter/Inter-Regular.ttf") format("woff2");
-}
 
 :root {
     --bg-header:#F7A100;
@@ -96,6 +87,7 @@ header .logo-item{
 }
 
 header .logo {
+    display: flex;
     max-height: 30px;
     padding: 0 10px;
 }
@@ -578,9 +570,13 @@ footer .footer-grid .footer-item ul li a:hover {
 
 .menu-overlay, .share-overlay {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
     z-index: 100;
+}
+
+.share-overlay {
+    height: 100vh;
 }
 .dropdown-overlay {
     border-bottom: 1px solid #ccc;
@@ -650,9 +646,22 @@ footer .footer-grid .footer-item ul li a:hover {
     transform: rotate(180deg);
     transition: all 0.3s ease-in-out;
 }
+.dropdown-button img {
+    transition: all 0.3s ease-in-out;
+}
+
 
 .item:hover .item-content h2{
     text-decoration: underline;
+}
+
+
+.menu-overlay.hidden ~ footer, .menu-overlay.hidden ~ .content, .menu-overlay.hidden ~ .sort-buttons, .menu-overlay.hidden ~ .breadcrumb{
+    display: block !important;
+}
+
+.menu-overlay ~ footer, .menu-overlay ~ .content, .menu-overlay ~ .sort-buttons, .menu-overlay ~ .breadcrumb{
+    display: none !important;
 }
 
 @media (min-width: 540px) {
